# autods-mcp-public

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  catalog-info.yaml  debug_server.py  docker-compose.yml  pyproject.toml  ruff.toml
manifests/: bulk_actions.json  products.json  products_research.json  stores.json  users.json
scripts/: mcp_call.py
src/autods_mcp_server/: __init__.py  analytics.py  app.py  dispatch.py  errors.py  identity.py  logging.py  mcp_transport.py  middleware.py  ratelimit.lua  ratelimit.py  redis_client.py  sentry.py  settings.py  tools.py  urls.py
src/autods_mcp_server/auth/: __init__.py  dependency.py  exceptions.py  jwks.py  verify.py
src/autods_mcp_server/manifests/: __init__.py  loader.py  schema.py
src/autods_mcp_server/oauth/: __init__.py  metadata.py  registration.py  routes.py
tests/: conftest.py  test_analytics.py  test_errors.py  test_health.py  test_https_middleware.py  test_logging_middleware.py  test_origin_middleware.py  test_ratelimit.py  test_sentry.py  test_settings.py
tests/auth/: conftest.py  test_dependency.py  test_jwks.py  test_verify.py
tests/e2e/: conftest.py  test_staging_smoke.py
tests/mcp_server/: conftest.py  test_analytics_integration.py  test_annotations_lint.py  test_converter.py  test_dispatch.py  test_hardening.py  test_identity.py  test_identity_cache.py  test_loader.py  test_transport.py
tests/oauth/: conftest.py  test_as_metadata.py  test_challenge_roundtrip.py  test_no_origin_access.py  test_path_constants.py  test_prm.py  test_register.py
