[project]
name = "autods-mcp-server"
version = "0.1.0"
description = "Public MCP server for AutoDS — exposes AutoDSApi/ProductsResearch tooling to MCP clients."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "AutoDS R&D" },
]

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.27.2",
    "mixpanel>=4.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.9.0",
    "redis>=8.0,<9",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]
test = [
    "fakeredis>=2.21",
    "lupa>=2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autods_mcp_server"]

[tool.uv]
package = true
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
